@@ -542,14 +542,14 @@ public class ImageProvider {
                     bytes = Base64.decodeBase64(data);
                 } else {
                     try {
-                        bytes = URLDecoder.decode(data, "utf-8").getBytes();
+                        bytes = URLDecoder.decode(data, "UTF-8").getBytes(Utils.UTF_8);
                     } catch (IllegalArgumentException ex) {
                         Main.warn("Unable to decode URL data part: "+ex.getMessage() + " (" + data + ")");
                         return null;
                     }
                 }
                 if (mediatype != null && mediatype.contains("image/svg+xml")) {
-                    String s = new String(bytes);
+                    String s = new String(bytes, Utils.UTF_8);
                     URI uri = getSvgUniverse().loadSVG(new StringReader(s), URLEncoder.encode(s, "UTF-8"));
                     SVGDiagram svg = getSvgUniverse().getDiagram(uri);
                     if (svg == null) {
